# akon_project

./: .dockerignore  Dockerfile  pyproject.toml
src/: db.py  init.sql  main.py  models.py  service.py
